profilelist1exp/unpackaged/objects/Custom_Products__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>Product__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Desc__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Product_LOB__c</fullName>
        <formula>Product__r.Channel_Product_LOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Product LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Channel Program</label>
        <referenceTo>Deal_Program__c</referenceTo>
        <relationshipLabel>Custom Products</relationshipLabel>
        <relationshipName>Custom_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_Type__c</fullName>
        <label>Filter Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB_Category__c</fullName>
        <formula>Product__r.LOB_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Desc__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Product__r.Product_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Desc__c</fullName>
        <formula>Product__r.Product_Line_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Text(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Custom Products</relationshipLabel>
        <relationshipName>DealProgram_Include_Exclude_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Custom Products</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidateClone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCLONE(), Product__c == &apos;&apos;)</errorConditionFormula>
        <errorMessage>Can not clone Custom Product with Criteria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateEmptyRecord</fullName>
        <active>true</active>
        <description>A check to select either product /  Criteria on custom product record.</description>
        <errorConditionFormula>AND(!ISCLONE(), Product__c = &apos;&apos;, Filter_Type__c = &apos;&apos;, Criteria__c = &apos;&apos;)</errorConditionFormula>
        <errorMessage>Select either Product /  Filter Type and Criteria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateIncludeExclude</fullName>
        <active>true</active>
        <description>To check a product with both exclude and include options.</description>
        <errorConditionFormula>AND(Include__c = true , Exclude__c = true)</errorConditionFormula>
        <errorMessage>Select either Include / Exclude</errorMessage>
    </validationRules>
</CustomObject>